Dummy_Package_for_scratch_org/main/default/objects/Test__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Test Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>