Dummy_Package_for_scratch_org/main/default/objects/Test__c/fields/Configuration__c.field-meta.xml
<CustomField>
    <fullName>Configuration__c</fullName>
    <label>Configuration</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>