Dummy_Package_for_scratch_org/main/default/objects/Test__c/fields/Reference__c.field-meta.xml
<CustomField>
    <fullName>Reference__c</fullName>
    <displayFormat>TE-{0000000}</displayFormat>
    <label>Reference</label>
    <type>AutoNumber</type>
</CustomField>