Dummy_Package_for_scratch_org/main/default/objects/Test__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Ready for Test</fullName>
            </value>
            <value>
                <fullName>Testing in Progress</fullName>
            </value>
            <value>
                <fullName>Testing Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>