Dummy_Package_for_scratch_org/main/default/objects/Test__c/fields/Tool__c.field-meta.xml
<CustomField>
    <fullName>Tool__c</fullName>
    <label>Tool</label>
    <length>255</length>
    <type>Text</type>
</CustomField>