Dummy_Package_for_scratch_org/main/default/objects/Test__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Reference__c</columns>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>Tool__c</columns>
    <columns>User_Story__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>